# digital-archive-maker

./: .abcde.conf  .abcde.conf.example  .abcde.conf.sample  .coverage  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Brewfile  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  IMPROVEMENTS.md  LICENSE  Makefile  NOTICE  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  TODO.md  USER_STORY_INVENTORY.md  compare_music.py  disc_ripping_guide.md  fix_album.sh  fix_album_covers.sh  fix_metadata.py  fix_track.py  movie_rating_cache.json  pyproject.toml  pytest.ini  requirements-lyrics.txt  requirements-test.txt  requirements.txt  test-pipeline-local.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
.local/research/: quality-standards.md
_install/: install_cleanup_abcde_xs.sh  install_setup_abcde_environment.sh
cache/: .gitkeep
config/: .gitkeep
custom-sync/: master-sync.py  sync-config.yaml.example
dam/: __init__.py  cli.py  config.py  console.py  deps.py  keys.py  sync.py
docs/: RELEASE_CHECKLIST.md  additional_tools.md  cd_ripping_guide.md  media_server_setup.md  music_collection_guide.md  music_guide.md  server_guide.md  tools_guide.md  video_guide.md  video_ripping_guide.md  video_title_selection_algorithm.md  video_workflows.md  workflow_guide.md  workflow_overview.md
docs/server_setups/: bmax_direct_play.md  jellyfin_small_box.md
gui/: README.md  package-lock.json  package.json
gui/src/: main.js  preload.js  renderer.html  renderer.js  styles.css
log/: .gitkeep
log/explicit/: .gitkeep
prince-lovesexy/: split_lovesexy.sh
scripts/: .gitkeep  run_tests.py  show_banner.py  test-pipeline.sh
tests/: .gitkeep  conftest.py  test_backfill_subs.py  test_clean_playlists.py  test_download_lyrics.py  test_fix_album.py  test_fix_album_covers.py  test_rip_video.py  test_set_explicit.py  test_tag_explicit_mb.py
